--- a/Apps/DesktopApp/GamesListview.xaml
+++ b/Apps/DesktopApp/GamesListview.xaml
@@ -4,9 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DesktopApp"
-             mc:Ignorable="d" 
-             BorderBrush="DarkGray" BorderThickness="1" Background="White">
-    <ScrollViewer Name="scrollViewer">
+             mc:Ignorable="d" Background="Gray">
+    <ScrollViewer Name="scrollViewer" BorderThickness="0">
         <StackPanel Name="stackPanel" Orientation="Vertical" Margin="5"/>
     </ScrollViewer>
 </UserControl>
