--- a/Apps/DesktopApp/GamesListviewItem.xaml
+++ b/Apps/DesktopApp/GamesListviewItem.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DesktopApp"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="Gray" Foreground="Black"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Border Margin="0,0,0,0" Name="border" BorderThickness="1" Background="White" BorderBrush="White" CornerRadius="3,3,3,3">
+    <Border Margin="0,0,0,0" Name="border" BorderThickness="1" Background="Gray" BorderBrush="Gray" CornerRadius="3,3,3,3">
         <StackPanel Orientation="Horizontal">
             <Image x:Name="image" Height="150px" Width="215px" />
             <Grid Margin="10,0,0,0">
@@ -28,11 +28,11 @@
                 <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Grid.ColumnSpan="3" Margin="0,-1,0,0">
                     <TextBlock x:Name="textName" FontWeight="Bold">-</TextBlock>
                     <TextBlock Margin="20,0,0,0" FontWeight="Bold">
-                        <Hyperlink>Edit</Hyperlink>
+                        <Hyperlink x:Name="linkEdit" Click="linkEdit_Click">Edit</Hyperlink>
                         |
-                        <Hyperlink>Match</Hyperlink>
+                        <Hyperlink x:Name="linkMatch" Click="linkMatch_Click">Match</Hyperlink>
                         |
-                        <Hyperlink>Delete</Hyperlink>
+                        <Hyperlink x:Name="linkDelete" Click="linkDelete_Click">Delete</Hyperlink>
                     </TextBlock>
                 </StackPanel>
                 
