--- a/Apps/DesktopApp/MainWindow.xaml
+++ b/Apps/DesktopApp/MainWindow.xaml
@@ -17,6 +17,6 @@
             <local:NavigationTreeview x:Name="navigationTreeview" 
                                       NavigationTreeviewItemSelected="navigationTreeview_NavigationTreeviewItemSelected" />
         </DockPanel>
-        <local:GamesListview x:Name="gamesListview" Margin="10,0,0,0" />
+        <local:GamesListview x:Name="gamesListview" Margin="10,0,0,0" AllowSelection="False" AllowEditing="True" />
     </DockPanel>
 </Window>
