Added Game Config mappings and Save State syncing

--- a/Apps/DesktopApp/EditGameView.xaml
+++ b/Apps/DesktopApp/EditGameView.xaml
@@ -18,10 +18,10 @@
         </Style>
     </UserControl.Resources>
     <StackPanel x:Name="panel" Orientation="Horizontal" IsEnabled="False">
-        <TextBlock x:Name="blockPaste" VerticalAlignment="Center" Margin="105,0,0,0" Visibility="Collapsed">
+        <TextBlock x:Name="blockPaste" VerticalAlignment="Center" Margin="140,0,0,0" Visibility="Collapsed">
             <Hyperlink x:Name="buttonPaste" Click="menuItemPaste_Click">Paste</Hyperlink>
         </TextBlock>
-        <Image x:Name="image" Height="240px" Width="344px">
+        <Image x:Name="image" Height="288px" Width="413px">
             <Image.ContextMenu>
                 <ContextMenu>
                     <MenuItem x:Name="menuItemCopy" Header="Copy" Click="menuItemCopy_Click"/>
@@ -38,6 +38,8 @@
                 <RowDefinition Height="24px" />
                 <RowDefinition Height="24px" />
                 <RowDefinition Height="24px" />
+                <RowDefinition Height="24px" />
+                <RowDefinition Height="24px" />
                 <RowDefinition Height="85px" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -46,20 +48,24 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0">Filename:</TextBlock>
             <TextBox Grid.Row="0" Grid.Column="1" x:Name="textFilename" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" IsEnabled="{ Binding Path=IsFilenameEditable }" Text="{ Binding Path=GameFilename }" />
-            <TextBlock Grid.Row="1" Grid.Column="0">Name:</TextBlock>
-            <TextBox Grid.Row="1" Grid.Column="1" x:Name="textName" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Name }" />
-            <TextBlock Grid.Row="2" Grid.Column="0">Publisher:</TextBlock>
-            <TextBox Grid.Row="2" Grid.Column="1" x:Name="textPublisher" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Publisher }" />
-            <TextBlock Grid.Row="3" Grid.Column="0">Developer:</TextBlock>
-            <TextBox Grid.Row="3" Grid.Column="1" x:Name="textDeveloper" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Developer }" />
-            <TextBlock Grid.Row="4" Grid.Column="0">Released:</TextBlock>
-            <DatePicker Grid.Row="4" Grid.Column="1" x:Name="textReleaseDate" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=ReleaseDate }" />
-            <TextBlock Grid.Row="5" Grid.Column="0">Genre:</TextBlock>
-            <TextBox Grid.Row="5" Grid.Column="1" x:Name="textGenre" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Genre }" />
-            <TextBlock Grid.Row="6" Grid.Column="0">Rating:</TextBlock>
-            <TextBox Grid.Row="6" Grid.Column="1" x:Name="textRating" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Rating }" />
-            <TextBlock Grid.Row="7" Grid.Column="0">Description:</TextBlock>
-            <TextBox Grid.Row="7" Grid.Column="1" x:Name="textDescription" BorderThickness="0px" Background="#CDCDCD" TextWrapping="Wrap" 
+            <TextBlock Grid.Row="1" Grid.Column="0" Padding="0,1,0,0">Emulator:</TextBlock>
+            <ComboBox Grid.Row="1" Grid.Column="1" x:Name="comboEmulator" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" SelectedValue="{ Binding Path=Emulator }" />
+            <TextBlock Grid.Row="2" Grid.Column="0" Padding="0,1,0,0">Button Map:</TextBlock>
+            <ComboBox Grid.Row="2" Grid.Column="1" x:Name="comboButtonMapping" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" SelectedValue="{ Binding Path=ButtonMapping }" />
+            <TextBlock Grid.Row="3" Grid.Column="0">Name:</TextBlock>
+            <TextBox Grid.Row="3" Grid.Column="1" x:Name="textName" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Name }" />
+            <TextBlock Grid.Row="4" Grid.Column="0">Publisher:</TextBlock>
+            <TextBox Grid.Row="4" Grid.Column="1" x:Name="textPublisher" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Publisher }" />
+            <TextBlock Grid.Row="5" Grid.Column="0">Developer:</TextBlock>
+            <TextBox Grid.Row="5" Grid.Column="1" x:Name="textDeveloper" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Developer }" />
+            <TextBlock Grid.Row="6" Grid.Column="0">Released:</TextBlock>
+            <DatePicker Grid.Row="6" Grid.Column="1" x:Name="textReleaseDate" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=ReleaseDate }" />
+            <TextBlock Grid.Row="7" Grid.Column="0">Genre:</TextBlock>
+            <TextBox Grid.Row="7" Grid.Column="1" x:Name="textGenre" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Genre }" />
+            <TextBlock Grid.Row="8" Grid.Column="0">Rating:</TextBlock>
+            <TextBox Grid.Row="8" Grid.Column="1" x:Name="textRating" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Rating }" />
+            <TextBlock Grid.Row="9" Grid.Column="0">Description:</TextBlock>
+            <TextBox Grid.Row="9" Grid.Column="1" x:Name="textDescription" BorderThickness="0px" Background="#CDCDCD" TextWrapping="Wrap" 
                          AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{ Binding Path=Description }" />
         </Grid>
     </StackPanel>
