Completed device sync platform support and device sync type/exclusions/selections

--- a/Apps/DesktopApp/EditGameView.xaml
+++ b/Apps/DesktopApp/EditGameView.xaml
@@ -50,8 +50,8 @@
             <TextBox Grid.Row="0" Grid.Column="1" x:Name="textFilename" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" IsEnabled="{ Binding Path=IsFilenameEditable }" Text="{ Binding Path=GameFilename }" />
             <TextBlock Grid.Row="1" Grid.Column="0" Padding="0,1,0,0">Emulator:</TextBlock>
             <ComboBox Grid.Row="1" Grid.Column="1" x:Name="comboEmulator" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" SelectedValue="{ Binding Path=Emulator }" />
-            <TextBlock Grid.Row="2" Grid.Column="0" Padding="0,1,0,0">Button Map:</TextBlock>
-            <ComboBox Grid.Row="2" Grid.Column="1" x:Name="comboButtonMapping" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" SelectedValue="{ Binding Path=ButtonMapping }" />
+            <TextBlock Grid.Row="2" Grid.Column="0" Padding="0,1,0,0">Config:</TextBlock>
+            <ComboBox Grid.Row="2" Grid.Column="1" x:Name="comboGameConfig" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" SelectedValue="{ Binding Path=GameConfig }" />
             <TextBlock Grid.Row="3" Grid.Column="0">Name:</TextBlock>
             <TextBox Grid.Row="3" Grid.Column="1" x:Name="textName" BorderThickness="0px" Background="#CDCDCD" Margin="0,0,0,4" Text="{ Binding Path=Name }" />
             <TextBlock Grid.Row="4" Grid.Column="0">Publisher:</TextBlock>
