--- a/Apps/DesktopApp/EditPlatformConfigDialog.xaml
+++ b/Apps/DesktopApp/EditPlatformConfigDialog.xaml
@@ -3,10 +3,37 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mygames="clr-namespace:Orbital7.MyGames;assembly=Orbital7.MyGames"
+        xmlns:extns="clr-namespace:Orbital7.Extensions.Windows.Desktop.WPF;assembly=Orbital7.Extensions.Windows.Desktop"
         xmlns:local="clr-namespace:DesktopApp"
         mc:Ignorable="d"
-        Title="EditPlatformConfigDialog" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+        WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize" ShowInTaskbar="False"
+        BorderThickness="2px" BorderBrush="Orange" Background="Black" Foreground="White"
+        Width="225px" Height="425px" Title="[Action] Platform Config">
+    <StackPanel Orientation="Vertical" Margin="5px">
+        <Label Foreground="White" FontWeight="Bold">Platform</Label>
+        <ComboBox x:Name="comboPlatform" Height="22px" BorderThickness="0" Margin="5,0,0,0" SelectionChanged="comboPlatform_SelectionChanged"/>
+        <Label Foreground="White" FontWeight="Bold" Margin="0,5,0,0">Game Configs</Label>
+        <DockPanel Height="115px" Margin="5,0,0,0">
+            <ToolBar DockPanel.Dock="Top" Background="Black" Margin="-5,0,0,0">
+                <Button x:Name="buttonAddGameConfig" Click="buttonAddGameConfig_Click" Foreground="White">Add</Button>
+                <Separator/>
+                <Button x:Name="buttonDeleteGameConfig" Click="buttonDeleteGameConfig_Click" Foreground="White" IsEnabled="False">Delete</Button>
+            </ToolBar>
+            <ListBox x:Name="listGameConfigs" SelectionChanged="listGameConfigs_SelectionChanged"/>
+        </DockPanel>
+        <Label Foreground="White" FontWeight="Bold" Margin="0,5,0,0">Emulators</Label>
+        <DockPanel Height="115px" Margin="5,0,0,0">
+            <ToolBar DockPanel.Dock="Top" Background="Black" Margin="-5,0,0,0">
+                <Button x:Name="buttonAddEmulator" Click="buttonAddEmulator_Click" Foreground="White">Add</Button>
+                <Separator/>
+                <Button x:Name="buttonDeleteEmulator" Click="buttonDeleteEmulator_Click" Foreground="White" IsEnabled="False">Delete</Button>
+            </ToolBar>
+            <ListBox x:Name="listEmulators" SelectionChanged="listEmulators_SelectionChanged"/>
+        </DockPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button x:Name="buttonDone" Click="buttonDone_Click" Width="65" Height="22" IsDefault="True">Done</Button>
+            <Button x:Name="buttonCancel" Click="buttonCancel_Click" Width="65" Height="22" IsCancel="True" Margin="5,0,0,0">Cancel</Button>
+        </StackPanel>
+    </StackPanel>
 </Window>
