--- a/Apps/DesktopApp/MatchGameDialog.xaml
+++ b/Apps/DesktopApp/MatchGameDialog.xaml
@@ -6,8 +6,8 @@
              xmlns:mygames="clr-namespace:Orbital7.MyGames;assembly=Orbital7.MyGames"
              xmlns:extns="clr-namespace:Orbital7.Extensions.Windows.Desktop.WPF;assembly=Orbital7.Extensions.Windows.Desktop"
              xmlns:local="clr-namespace:DesktopApp"
-             mc:Ignorable="d" ShowInTaskbar="False" 
-             WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize"
+             mc:Ignorable="d"
+             WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize" ShowInTaskbar="False"
              BorderThickness="2px" BorderBrush="Orange" Background="Black" Foreground="White"
              Width="888px" Height="850px" Title="Match Game">
     <DockPanel Margin="5">
